[FIX] #8 Fix overflow in grade assignment

--- a/scss/trema/modules.scss
+++ b/scss/trema/modules.scss
@@ -70,3 +70,7 @@ body.path-mod-quiz {
         }
     }
 }
+
+body.path-mod-assign.pagelayout-embedded {
+    overflow: auto;
+}
